
Added BRDF calculations to genBSDF.

Bug fixes in rsensor thanks to help from David Geisler-Moroder.

Added variable-resolution BSDF support in renderers and genBSDF.

Created pkgBSDF program to extract BSDF geometry and put it
together with surface description suitable for inclusion in
a Radiance scene.

Muted warning for "no light sources found" when there is at least
one glow object and interreflections are on (-ab > 0).

Fixed long-standing bug that caused underestimation of reflection
when specular component was below -st threshold in non-metals.

Checked in cross-platform cmake build system created by Bill Hoffman
of KitWare and sponsored by NREL.  This includes a qt-based
driver for rvu, which is built in the new subdirectory src/qtrvu.

=====================
Version 4.2

Axel Jacobs added -cp and -palettes options to falsecolor.

Fixed bug in matrix output of genBSDF introduced shortly before 4.1 release.

Made rvu more responsive in multi-processing mode when changing parameters.
Explicit "new" command not needed to show changes, because it goes back
to "immediate mode" once something is changed.  Processing will be slow
but response time quick until next "new" command.

Fixed major bug in transmitting proxy material sampling.

Patched cmake build tools (changes by Zack Galbreath).

Removed requirement for pflip -h to be given input file (can pipe from stdin).

Added "Number of processes" slider to trad "Action" pane to control rad -N
option for rvu and batch rendering.

Added -c option to vwrays to repeat pixels for rtcontrib.

Reworked rtcontrib program and renamed to rcontrib.  New version runs much
faster, especially on multiprocessor systems, and doesn't require as much
memory.  No longer calls rtrace; instead does all the work itself.

Added -d option to genskyvec to produce direct-only (sun no sky) vector.

Added Ashikhmin-Shirley anisotropic BRDF model (ashik2) with help
from Nicolas Boneel.